--- a/app/new_ui_views/layouts/dashboard.html.haml
+++ b/app/new_ui_views/layouts/dashboard.html.haml
@@ -67,6 +67,7 @@
     %main{:role => "main"}
       .main-wrapper
         = render 'dashboard/shared/flash'
+        = render 'dashboard/shared/dashboard_messages'
 
         = yield
 
