--- a/app/new_ui_views/dashboard/company/merchant_accounts/_paypal_adaptive.html.liquid
+++ b/app/new_ui_views/dashboard/company/merchant_accounts/_paypal_adaptive.html.liquid
@@ -1,18 +1,27 @@
 <h2>{{ 'simple_form.labels.company.payout.via_paypal' | translate }}</h2>
+{{ }}
 
-
-{% if merchant_account.errors != blank %}
-<div class="errors-global">
-  <ul>
-    {{ merchant_account.errors }}
-  </ul>
-</div>
+{% if merchant_account.state != 'pending' %}
+  <p><h3>{{ merchant_account.state_info }}</h3></p>
 {% endif %}
 
-<input id="company_paypal_adaptive_merchant_account_attributes_id" name="company[paypal_adaptive_merchant_account_attributes][id]" type="hidden" value="{{ merchant_account.id}}">
+{% if merchant_account.errors != blank %}
+  <div class="errors-global">
+    <ul>
+      {{ merchant_account.errors }}
+    </ul>
+  </div>
+{% endif %}
 
-<div class="form-group string optional company_paypal_adaptive_merchant_account_attributes_email">
-  <label class="control-label" for="company_paypal_adaptive_merchant_account_attributes_email">{{ 'payouts.paypal.email' | translate }}</label>
+<input class="numeric integer optional form-control" type="hidden" step="1" value="{{ merchant_account.id}}" name="merchant_account[id]" id="merchant_account_{{index}}_id">
 
-  <input class="form-control string" id="company_paypal_adaptive_merchant_account_attributes_email" name="company[paypal_adaptive_merchant_account_attributes][email]" type="text" value="{{ merchant_account.data['email']}}">
+<div class="form-group string optional merchant_account_email">
+  <label class="control-label" for="merchant_account_email">{{ 'payouts.paypal.email' | translate }}</label>
+  <input class="form-control string" id="merchant_account_email" name="merchant_account[email]" type="text" value="{{ merchant_account.data['email']}}">
+</div>
+
+<div class="panel form-actions">
+<div class="panel-body">
+<input type="submit" name="commit" value="{{ 'payouts.buttons.save' | translate }}">
+</div>
 </div>
