--- a/app/views/dashboard/company/merchant_accounts/_paypal_express_chain.html.liquid
+++ b/app/views/dashboard/company/merchant_accounts/_paypal_express_chain.html.liquid
@@ -1,40 +1,21 @@
-<input class="string optional" id="company_paypal_express_chain_merchant_account_attributes_email" name="company[paypal_express_chain_merchant_account_attributes][id]" placeholder="" type="hidden" value="{{ merchant_account.id}}">
+<h2>{{ 'simple_form.labels.company.payout.via_paypal' | translate }}</h2>
 
-<br/>
+<input id="merchant_account_id" name="merchant_account[id]" placeholder="" type="hidden" value="{{ merchant_account.id}}">
 
-{% if merchant_account.chain_payments? %}
-  <div class="panel panel-default">
-    <div class="panel-heading">{{ 'simple_form.labels.company.payout.via_paypal' | translate }}</div>
-    <div class="panel-body">
-      <input class="string optional" id="company_paypal_express_chain_merchant_account_attributes_email" name="company[paypal_express_chain_merchant_account_attributes][merchant_token]" placeholder="" type="hidden" value="{{ merchant_account.data['merchant_token']}}">
+<input id="merchant_account_merchant_token" name="merchant_account[merchant_token]" type="hidden" value="{{ merchant_account.data['merchant_token']}}">
 
-      <div class="submit-bar">
-        <input class="btn medium blue" type="submit" value="Connect with PayPal">
-      </div>
-    </div>
-  </div>
-  {% if merchant_account.permissions_granted %}
-    {% if merchant_account.chain_payment_set? %}
-      <p><a class="btn medium blue" href="/dashboard/company/paypal_agreements/{{ merchant_account.id }}" data-method="delete" data-confirm="{{ 'payouts.revoke_permission_confirmation' | translate }}">{{ 'payouts.revoke_permission' | translate }}</a></p>
-    {% else %}
-      <div class="well">{{ 'payouts.grant_permission_info' | translate }}</div>
-      <p><a class="btn medium blue" href="/dashboard/company/paypal_agreements/new">{{ 'payouts.grant_permission' | translate }}</a></p>
-    {% endif %}
+{% if merchant_account.permissions_granted %}
+  {% if merchant_account.chain_payment_set? %}
+    <p><a class="btn btn-warning" href="/dashboard/company/paypal_agreements/{{ merchant_account.id }}" data-method="delete" data-confirm="{{ 'payouts.revoke_permission_confirmation' | translate }}">{{ 'payouts.revoke_permission' | translate }}</a></p>
+  {% else %}
+    <div class="well">{{ 'payouts.grant_permission_info' | translate }}</div>
+    <p>
+      <a class="btn btn-primary" href="/dashboard/company/paypal_agreements/new">{{ 'payouts.grant_permission' | translate }}</a>
+    </p>
   {% endif %}
 {% else %}
-  <h3>{{ 'simple_form.labels.company.payout.via_paypal' | translate }}</h3>
-
-  <div class="string optional company_paypal_express_chain_merchant_account_attributes_email">
-    <div class="row">
-      <div class="col-md-3">
-        <label class="string optional control-label" for="company_paypal_express_chain_merchant_account_attributes_email">Paypal Email</label>
-      </div>
-      <div class="col-md-9 input-container">
-        <input class="string optional" id="company_paypal_express_chain_merchant_account_attributes_email" name="company[paypal_express_chain_merchant_account_attributes][email]" placeholder="" type="text" value="{{ merchant_account.data['email']}}">
-      </div>
-    </div>
-  </div>
-  <div class="submit-bar">
-    <input class="btn medium blue" type="submit" value="Save">
-  </div>
+  <p>
+    <button type="submit" class="btn btn-primary">{{ 'payouts.paypal.connect' | translate }}</button>
+  </p>
 {% endif %}
+
