--- a/app/new_ui_views/listings/reservations/review.html.haml
+++ b/app/new_ui_views/listings/reservations/review.html.haml
@@ -14,7 +14,7 @@
               - @reservation_request.errors[:base].each do |error|
                 - error.split("\n").each do |e|
                   - e.sub!(/^Properties/, '')
-                  - e.sub!('Address address', 'Address')
+                  - e.sub!(/^Address address/, '')
                   - next if ["Address latitude can't be blank", "Address longitude can't be blank"].any? { |m| e == m }
                   %li= e
 
