--- a/app/new_ui_views/registrations/social_accounts.html.haml
+++ b/app/new_ui_views/registrations/social_accounts.html.haml
@@ -9,9 +9,6 @@
     - if @supported_providers.any?
       = render "registrations/networks", supported_providers: @supported_providers
 
-    - if HiddenUiControls.find('dashboard/notification_preferences/click_to_call').visible?
-      = render "registrations/communications"
-
-    - if @supported_providers.empty? && HiddenUiControls.find('dashboard/notification_preferences/click_to_call').hidden?
+    - if @supported_providers.empty?
       %p.empty-resultset= t('registrations.social_accounts.no_social_providers', marketplace_name: platform_context.name).html_safe
 
