NM-1944 aws-route53 implementation
expose domain records
localize texts and headings
move creating hosted zone to DL job
update backup, info and s3tool libs
rewrite old balancer
fix backup rake task
update views; add simple r53 service
cleaup after deleting domain record
fix specs

--- a/app/views/instance_admin/settings/domains/_domain.html.haml
+++ b/app/views/instance_admin/settings/domains/_domain.html.haml
@@ -1,6 +1,8 @@
 %tr
-  %td= link_to_if domain.editable?, domain.name, edit_instance_admin_settings_domain_path(domain)
-  %td= domain.state.to_s.humanize
+  %td= link_to domain.name, [:instance_admin,:settings, domain]
+  %td
+    = domain.state.to_s.humanize
+    .small= domain.error_message if domain.failed?
   %td= domain.dns_name
   %td= domain.redirect_to
   %td= domain.use_as_default ? "Yes" : "No"
