--- a/app/new_ui_views/dashboard/company/locations/_location.html.haml
+++ b/app/new_ui_views/dashboard/company/locations/_location.html.haml
@@ -1,4 +1,5 @@
-- single_location = location.listings.first.try(:transactable_type).try(:single_location)
+- single_location = defined?(transactable_type) ? transactable_type.single_location : location.listings.first.try(:transactable_type).try(:single_location)
+
 - is_hidden = defined?(f) && f.object.location_id != location.id
 - with_deleted_link = params[:controller] == 'dashboard/company/locations' ? ActiveRecord::Type::Boolean.new.type_cast_from_database(params[:with_deleted_link]) : !defined?(f) || f.object.location_id != location.id
 %span{data: { "location-id" => location.id, availability: pretty_availability_sentence(location.availability).to_s }, hidden: defined?(f) ? is_hidden : false }
